--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -19,23 +19,22 @@ $small-font-size: 0.813rem;
 $smallest-font-size: 0.75rem;
 
 .sideBar {
-  background: $white-color;
-  box-shadow: 1px 0px 4px $grey-text;
   width: 18%;
   height: 100%;
   gap: 1rem;
   overflow: auto;
+  background: $white-color;
+  box-shadow: 1px 0px 4px $grey-text;
 
   .logoDiv {
     padding: 1.5rem 1.5rem 0;
     cursor: pointer;
 
     img {
-      // max-width: 20px;
       margin-right: 0.5rem;
-      background: $input-color;
       border-radius: 2px;
-      padding: 2rem;
+    }
+
     }
   }
 }
