--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -44,6 +44,51 @@ $smallest-font-size: 0.75rem;
     }
   }
 
+  .menuDiv,
+  .settingsDiv {
+    .divTitle {
+      padding: 0 1.5rem 1.5rem;
+      font-size: $h3-font-size;
+      color: $black-color;
+    }
+
+    .menuLists {
+      .listItem {
+        width: 100%;
+        padding: 0.2rem 1.5rem;
+        position: relative;
+
+        &::before {
+          content: '';
+          width: 5px;
+          height: 0;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+          background: $primary-color;
+        }
+
+        .menuLink {
+          font-weight: 500;
+          color: $grey-text;
+
+          .icon {
+            margin-right: 0.5rem;
+          }
+        }
+
+        &:hover .menuLink {
+          transition: 0;
+          color: $primary-color;
+        }
+
+        &:hover::before {
+          height: 100%;
+          transition: 0.3s ease;
+        }
+      }
     }
   }
 }
