--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -19,12 +19,12 @@ $small-font-size: 0.813rem;
 $smallest-font-size: 0.75rem;
 
 .sideBar {
+  gap: 1rem;
   width: 18%;
   height: 100%;
-  gap: 1rem;
-  overflow: auto;
   background: $white-color;
   box-shadow: 1px 0px 4px $grey-text;
+  overflow: auto;
 
   .logoDiv {
     padding: 1.5rem 1.5rem 0;
@@ -88,6 +88,77 @@ $smallest-font-size: 0.75rem;
           height: 100%;
           transition: 0.3s ease;
         }
+      }
+    }
+  }
+
+  .sideBarCard {
+    position: relative;
+    width: 100%;
+    padding: 1rem;
+    text-align: center;
+
+    .icon {
+      position: absolute;
+      top: -8px;
+      right: 50%;
+      z-index: 100;
+      border: 10px solid $white-color;
+      border-radius: 50%;
+      font-size: 3rem;
+      background: $hover-color;
+      transform: translate(50%);
+    }
+
+    .cardContent {
+      position: relative;
+      padding: 1rem;
+      border-radius: 10px;
+      background: $hover-color;
+      overflow: hidden;
+
+      .circle1,
+      .circle2 {
+        position: absolute;
+        border-radius: 50%;
+        background: $pale-green;
+        opacity: 0.7;
+      }
+
+      .circle1 {
+        top: -50px;
+        left: -50px;
+        width: 100px;
+        height: 100px;
+      }
+
+      .circle2 {
+        bottom: -80px;
+        right: -70px;
+        z-index: 1;
+        width: 150px;
+        height: 150px;
+      }
+
+      h3 {
+        padding: 1rem 0;
+        margin-top: 1rem;
+        font-size: $h3-font-size;
+        font-weight: 800;
+        color: $black-color;
+      }
+
+      p {
+        padding-bottom: 1rem;
+        font-size: $normal-font-size;
+        font-weight: 500;
+        color: $text-color;
+      }
+
+      .btn {
+        position: relative;
+        color: $text-color;
+        z-index: 1000;
       }
     }
   }
