feat: create styles

--- a/src/App.scss
+++ b/src/App.scss
@@ -37,8 +37,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
   padding: 1rem;
+  margin: auto;
 }
 
 li {
@@ -65,16 +65,21 @@ img {
 }
 
 .container {
-  position: relative;
-  width: 95vw;
-  height: 95vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: $bg-color;
-  overflow: hidden;
+  position: relative;
+  width: 95vw;
+  height: 95vh;
   border-radius: 1rem;
+  background: $bg-color;
   box-shadow: 2px 2px 8px $grey-text;
+  overflow: hidden;
+}
+
+.btn,
+.icon {
+  margin-left: 0.5rem;
 }
 
 .btn {
@@ -85,21 +90,16 @@ img {
   box-shadow: 0 2px 4px $input-color;
   color: $text-color;
   cursor: pointer;
-}
 
-.btn:hover {
-  background: $pale-green;
-  color: $primary-color;
+  &:hover {
+    color: $primary-color;
+    background: $pale-green;
+  }
 }
 
 .icon {
   font-size: $h2-font-size;
   cursor: pointer;
-}
-
-.btn,
-.icon {
-  margin-left: 0.5rem;
 }
 
 ::-webkit-scrollbar {
