--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -163,3 +163,96 @@ $smallest-font-size: 0.75rem;
     }
   }
 }
+
+@media screen and (max-width: 990px) {
+  .sideBar {
+    .sideBarCard {
+      display: none;
+    }
+  }
+}
+
+@media screen and (max-width: 920px) {
+  .sideBar {
+    .logoDiv {
+      padding: 0;
+      justify-content: center;
+
+      img {
+        max-width: 80%;
+        margin: 0;
+      }
+
+      h2 {
+        display: none;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .sideBar {
+    width: 16%;
+    padding-bottom: 4rem;
+
+    .menuDiv,
+    .settingsDiv {
+      .divTitle,
+      .menuLists {
+        .listItem {
+          .menuLink {
+            justify-content: center;
+
+            .icon {
+              margin: 0;
+            }
+            .smallText {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 745px) {
+  .sideBar {
+    .logoDiv {
+      img {
+        max-width: 90%;
+      }
+    }
+
+    .menuDiv {
+      .menuLists {
+        .listItem {
+          .menuLink {
+            .icon {
+              font-size: $h1-font-size;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .sideBar {
+    .menuDiv,
+    .settingsDiv {
+      .menuLists {
+        .listItem {
+          padding: 0.2rem 0.5rem;
+
+          .menuLink {
+            .icon {
+              font-size: $h2-font-size;
+            }
+          }
+        }
+      }
+    }
+  }
+}
