--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -19,7 +19,7 @@ $small-font-size: 0.813rem;
 $smallest-font-size: 0.75rem;
 
 .sideBar {
-  gap: 1rem;
+  gap: 1.5rem;
   width: 18%;
   height: 100%;
   background: $white-color;
@@ -31,7 +31,7 @@ $smallest-font-size: 0.75rem;
     cursor: pointer;
 
     img {
-      max-width: 65px;
+      width: 65px;
       padding: 0.2rem;
       border-radius: 2px;
       margin-right: 0.5rem;
@@ -192,12 +192,15 @@ $smallest-font-size: 0.75rem;
 
 @media screen and (max-width: 820px) {
   .sideBar {
-    width: 16%;
+    width: 18%;
     padding-bottom: 4rem;
 
     .menuDiv,
     .settingsDiv {
-      .divTitle,
+      .divTitle {
+        display: none;
+      }
+
       .menuLists {
         .listItem {
           .menuLink {
@@ -219,8 +222,22 @@ $smallest-font-size: 0.75rem;
 @media screen and (max-width: 745px) {
   .sideBar {
     .logoDiv {
+      width: 100%;
+      margin: auto;
+
       img {
-        max-width: 90%;
+        max-width: 80%;
+      }
+    }
+
+    .menuDiv,
+    .settingsDiv {
+      .menuLists {
+        .listItem {
+          .menuLink {
+            justify-content: center;
+          }
+        }
       }
     }
 
