refactor(App, Activity, Listing, SideBar, Top): implement reusable variables

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,68 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
-
-/* Colors and Styles (Default) */
-$primary-color: hsl(94, 59%, 35%);
-$hover-color: #bdf094;
-$pale-green: hsl(96, 75%, 89%);
-$white-color: hsl(0, 0%, 100%);
-$black-color: hsl(0, 0%, 10%);
-$text-color: hsl(240, 1%, 48%);
-$bg-color: hsl(220, 10%, 94%);
-$grey-text: rgb(190, 190, 190);
-$input-color: hsl(330, 12%, 97%);
-
-/* Fonts and Typography */
-$biggest-font-size: 2.5rem;
-$h1-font-size: 1.5rem;
-$h2-font-size: 1.25rem;
-$h3-font-size: 1rem;
-$normal-font-size: 0.938rem;
-$small-font-size: 0.813rem;
-$smallest-font-size: 0.75rem;
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: 'Montserrat', sans-serif;
-  transition: 0.3s ease;
-}
-
-/* Default Styles */
-html {
-  font-size: 90%;
-}
-
-body {
-  padding: 1rem;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  width: 100%;
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-}
-
-.grid {
-  display: grid;
-  align-items: center;
-  gap: 1.5rem;
-}
+@use './shared/styles/vars';
 
 .container {
   width: 95vw;
@@ -72,60 +8,7 @@ img {
   align-items: center;
   justify-content: center;
   position: relative;
-  background: $bg-color;
-  box-shadow: 2px 2px 8px $grey-text;
+  background: vars.$bg-color;
+  box-shadow: 2px 2px 8px vars.$grey-text;
   overflow: hidden;
-}
-
-.btn,
-.icon {
-  margin-left: 0.5rem;
-}
-
-.btn {
-  padding: 0.8rem 1rem;
-  border: unset;
-  border-radius: 8px;
-  outline: unset;
-  box-shadow: 0 2px 4px $input-color;
-  color: $text-color;
-  cursor: pointer;
-
-  &:hover {
-    color: $primary-color;
-    background: $pale-green;
-  }
-}
-
-.icon {
-  font-size: $h2-font-size;
-  cursor: pointer;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-@media screen and (max-width: 990px) {
-  .heading {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 918px) {
-  .heading {
-    flex-direction: row;
-    align-items: center;
-    gap: 1rem;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .heading {
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 1rem;
-  }
 }
