--- a/src/templates/Listing/Listing.scss
+++ b/src/templates/Listing/Listing.scss
@@ -1,25 +1,4 @@
-/* Colors and Styles (Default) */
-$primary-color: hsl(94, 59%, 35%);
-$hover-color: #bdf094;
-$pale-green: hsl(96, 75%, 89%);
-$white-color: hsl(0, 0%, 100%);
-$black-color: hsl(0, 0%, 10%);
-$text-color: hsl(240, 1%, 48%);
-$bg-color: hsl(220, 10%, 94%);
-$grey-text: rgb(190, 190, 190);
-$input-color: hsl(330, 12%, 97%);
-/* new */
-$item-card-color: hsl(120, 5%, 88%);
-$item-card-hover: hsl(120, 27%, 87%);
-
-/* Fonts and Typography */
-$biggest-font-size: 2.5rem;
-$h1-font-size: 1.5rem;
-$h2-font-size: 1.25rem;
-$h3-font-size: 1rem;
-$normal-font-size: 0.938rem;
-$small-font-size: 0.813rem;
-$smallest-font-size: 0.75rem;
+@use '../../shared/styles/vars';
 
 .listingSection {
   flex-basis: 75%;
@@ -30,8 +9,8 @@ $smallest-font-size: 0.75rem;
 
     h1 {
       font-weight: 700;
-      font-size: $h2-font-size;
-      color: $black-color;
+      font-size: vars.$h2-font-size;
+      color: vars.$black-color;
     }
 
     .btn {
@@ -39,7 +18,7 @@ $smallest-font-size: 0.75rem;
       font-weight: 500;
 
       &:hover {
-        border: 1px solid $primary-color;
+        border: 1px solid vars.$primary-color;
       }
     }
   }
@@ -59,18 +38,18 @@ $smallest-font-size: 0.75rem;
       flex-direction: column;
       gap: 0.5rem 0;
       position: relative;
-      background-color: $item-card-color;
+      background-color: vars.$item-card-color;
 
       &:hover {
-        background: $item-card-hover;
-        box-shadow: 0 2px 2px $input-color;
+        background: vars.$item-card-hover;
+        box-shadow: 0 2px 2px vars.$input-color;
       }
 
       .icon {
         position: absolute;
         top: -5px;
         right: -5px;
-        color: $primary-color;
+        color: vars.$primary-color;
         z-index: 12;
       }
 
@@ -82,9 +61,9 @@ $smallest-font-size: 0.75rem;
 
       h3 {
         width: 80%;
-        font-size: $h3-font-size;
+        font-size: vars.$h3-font-size;
         text-align: center;
-        color: $black-color;
+        color: vars.$black-color;
       }
     }
   }
@@ -108,17 +87,17 @@ $smallest-font-size: 0.75rem;
         border-radius: 1rem;
         margin-top: 1.5rem;
         gap: 1rem;
-        background: $white-color;
-        box-shadow: 0 2px 4px $input-color;
+        background: vars.$white-color;
+        box-shadow: 0 2px 4px vars.$input-color;
 
         .users {
           padding-right: 1rem;
-          border-right: 2px solid $grey-text;
+          border-right: 2px solid vars.$grey-text;
 
           img {
             width: 30px;
             height: 30px;
-            border: 2px solid $input-color;
+            border: 2px solid vars.$input-color;
             border-radius: 50%;
             object-fit: cover;
 
@@ -132,7 +111,7 @@ $smallest-font-size: 0.75rem;
         .cardText {
           span {
             font-weight: 500;
-            color: $black-color;
+            color: vars.$black-color;
           }
 
           small {
