--- a/src/shared/styles/Listing.scss
+++ b/src/shared/styles/Listing.scss
@@ -8,14 +8,13 @@
     justify-content: space-between;
 
     h1 {
-      font-weight: 700;
       font-size: vars.$h2-font-size;
+      font-weight: 700;
       color: vars.$black-color;
     }
 
     .btn {
       border: 1px solid transparent;
-      font-weight: 500;
 
       &:hover {
         border: 1px solid vars.$primary-color;
@@ -70,12 +69,15 @@
 
   .sellers {
     width: 100%;
+    margin-top: 1rem;
     justify-content: space-between;
-    gap: 1rem;
     align-items: center;
+    gap: 0 1rem;
 
     .topSellers,
     .featuredSellers {
+      flex-direction: column;
+
       .heading {
         .btn {
           padding: 0.5rem 1rem;
@@ -85,7 +87,7 @@
       .card {
         padding: 1rem 1.5rem;
         border-radius: 1rem;
-        margin-top: 1.5rem;
+        margin-top: 0.25rem;
         gap: 1rem;
         background: vars.$white-color;
         box-shadow: 0 2px 4px vars.$input-color;
@@ -134,6 +136,12 @@
     .sellers {
       .topSellers,
       .featuredSellers {
+        .heading {
+          .btn {
+            margin-left: 0;
+          }
+        }
+
         .card {
           padding: 1rem;
           flex-direction: column;
@@ -160,17 +168,20 @@
       .featuredSellers {
         width: 50%;
 
-        .card {
-          flex-direction: row;
+        .heading {
+          padding: 1rem 0 1rem;
+        }
 
-          .users {
-            padding-right: 0;
-          }
+        .card {
+          width: 100%;
+          flex-direction: row;
+          align-self: flex-start;
+          justify-content: space-between;
 
           .cardText {
             small {
               .date {
-                margin-left: 0;
+                margin-left: 0.35rem;
               }
             }
           }
