--- a/src/shared/styles/Listing.scss
+++ b/src/shared/styles/Listing.scss
@@ -216,8 +216,14 @@
   }
 }
 
-@media screen and (max-width: 490px) {
+@media screen and (max-width: 495px) {
   .listingSection {
+    .heading {
+      h1 {
+        padding: 0.5rem 0;
+      }
+    }
+
     .sellers {
       flex-direction: column;
       align-items: center;
@@ -225,6 +231,12 @@
       .topSellers,
       .featuredSellers {
         width: 100%;
+
+        .heading {
+          h3 {
+            padding: 0.5rem 0;
+          }
+        }
 
         .card {
           flex-direction: row;
@@ -236,7 +248,7 @@
 
             small {
               .date {
-                margin-left: 0;
+                margin-left: 0.25rem;
               }
             }
           }
