--- a/src/shared/styles/SideBar.scss
+++ b/src/shared/styles/SideBar.scss
@@ -13,8 +13,9 @@
     cursor: pointer;
 
     img {
-      width: 65px;
-      padding: 0.2rem;
+      // width: 65px;
+      width: 50%;
+      // padding: 0.5rem;
       border-radius: 2px;
       margin-right: 0.5rem;
       background: vars.$input-color;
@@ -161,8 +162,7 @@
       justify-content: center;
 
       img {
-        max-width: 80%;
-        margin: 0;
+        width: 80%;
       }
 
       h2 {
@@ -172,10 +172,16 @@
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 840px) {
   .sideBar {
     width: 14%;
     padding-bottom: 4rem;
+
+    .logoDiv {
+      img {
+        margin-right: 0;
+      }
+    }
 
     .menuDiv,
     .settingsDiv {
@@ -207,9 +213,9 @@
       width: 100%;
       margin: auto;
 
-      img {
-        max-width: 80%;
-      }
+      // img {
+      //   max-width: 80%;
+      // }
     }
 
     .menuDiv,
@@ -237,7 +243,17 @@
   }
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 475px) {
+  .sideBar {
+    .logoDiv {
+      img {
+        margin: 0 0.5rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 440px) {
   .sideBar {
     .menuDiv,
     .settingsDiv {
