--- a/src/shared/styles/main.scss
+++ b/src/shared/styles/main.scss
@@ -1,4 +1,4 @@
-@use './shared/styles/vars';
+@use './vars';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 * {
