refactor(shared): place styles in the folder

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,4 @@
-@use './styles/vars';
+@use './shared/styles/vars';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 
 * {
