fix: add height rules to simplify browser calculations

--- a/src/templates/SideBar/SideBar.scss
+++ b/src/templates/SideBar/SideBar.scss
@@ -14,6 +14,7 @@
 
     img {
       width: 50%;
+      height: 100%;
       border-radius: 2px;
       margin-right: 0.5rem;
       background: vars.$input-color;
