refactor: format the code

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,11 +1,11 @@
-@use './shared/styles/vars';
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
+@use "./shared/styles/vars";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   transition: 0.3s ease;
 }
 
