--- a/src/templates/Top/Top.scss
+++ b/src/templates/Top/Top.scss
@@ -1,4 +1,4 @@
-@use '../../shared/styles/vars';
+@use "../../shared/styles/vars";
 
 .topSection {
   .headerSection {
@@ -153,7 +153,7 @@
         gap: 1rem;
 
         &::before {
-          content: '';
+          content: "";
           width: 75%;
           height: 100%;
           border-radius: 1rem;
