fix(accessibility): change color contransts

--- a/src/main.scss
+++ b/src/main.scss
@@ -56,7 +56,7 @@ img {
   border-radius: 8px;
   outline: unset;
   box-shadow: 0 2px 4px vars.$input-color;
-  color: vars.$text-color;
+  color: vars.$text-color-71;
   cursor: pointer;
 
   &:hover {
