--- a/src/shared/styles/_vars.scss
+++ b/src/shared/styles/_vars.scss
@@ -11,6 +11,11 @@ $input-color: hsl(330, 12%, 97%);
 /* new */
 $item-card-color: hsl(120, 5%, 88%);
 $item-card-hover: hsl(120, 27%, 87%);
+/* Accessibility */
+$logo-color: hsl(99, 61%, 24%);
+$primary-color-97: hsl(97, 57%, 22%);
+$text-color-71: hsl(240, 1%, 28%);
+$grey-text-89: rgb(89, 89, 89);
 
 /* Fonts and Typography */
 $biggest-font-size: 2.5rem;
