--- a/src/templates/Activity/Activity.scss
+++ b/src/templates/Activity/Activity.scss
@@ -51,7 +51,7 @@
         small {
           font-size: vars.$small-font-size;
           font-weight: 500;
-          color: vars.$text-color;
+          color: vars.$text-color-71;
         }
       }
 
@@ -59,7 +59,7 @@
         align-self: center;
         font-size: vars.$smallest-font-size;
         font-weight: 500;
-        color: vars.$text-color;
+        color: vars.$text-color-71;
       }
     }
   }
