--- a/src/templates/Top/Top.scss
+++ b/src/templates/Top/Top.scss
@@ -14,7 +14,7 @@
       p {
         font-size: vars.$normal-font-size;
         font-weight: 500;
-        color: vars.$text-color;
+        color: vars.$text-color-71;
       }
     }
 
@@ -108,7 +108,7 @@
         .btn {
           padding: 0.8rem 1.5rem;
           border: 2px solid transparent;
-          color: vars.$primary-color;
+          color: vars.$primary-color-97;
           box-shadow: none;
         }
 
